--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>I am practicing web development</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi delectus omnis ullam. Quaerat repudiandae iusto
         nobis corrupti dolor qui! Maxime?</p>
 </body>
