--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi delectus omnis ullam. Quaerat repudiandae iusto
         nobis corrupti dolor qui! Maxime?</p>
     <div>
-        <li>tamim</li>
+        <li>tamim vat khai</li>
         <li>sakib</li>
         <li>riyad</li>
     </div>
