--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         <li>tamim vat khai</li>
         <li>sakib</li>
-        <li>riyad</li>
+        <li>riyad retired</li>
     </div>
 </body>
 
